<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/vNavFixedMode"
            android:icon="@drawable/ic_location_fixed_black_24px"
            android:title="@string/title_activity_fixed_mode" />
        <item
            android:id="@+id/vNavRouteMode"
            android:icon="@drawable/ic_location_route_black_24px"
            android:title="@string/title_activity_route_mode" />
    </group>

    <item android:title="@string/nav_divider_readings">
        <menu>
            <item
                android:id="@+id/vNavImprint"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/title_activity_imprint" />
        </menu>
    </item>

</menu>
