<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/face"
    android:fitsSystemWindows="true"
    tools:context="de.p72b.mocklation.imprint.ImprintActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="de.p72b.mocklation.main.MainActivity"
        tools:showIn="@layout/activity_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/guideline_dialog_content_padding"
            android:orientation="vertical">

            <TextView
                style="@style/TitleH1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/imprint_producer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="developed by p72b" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/imprint_about_text" />

            <TextView
                android:id="@+id/imprint_github_project_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                tools:text="https://github.com/P72B/Mocklation" />

            <TextView
                style="@style/TitleH1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imprint_contact_title" />

            <TextView
                android:id="@+id/imprint_producer_contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                tools:text="Willy Riechert" />

            <TextView
                android:id="@+id/imprint_producer_contact_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web|email"
                tools:text="willy.riechert@googlemail.com" />

            <TextView
                android:id="@+id/imprint_producer_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web|email"
                tools:text="Berlin, Germany" />

            <TextView
                style="@style/TitleH1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imprint_dependencies_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/eye"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apache_2_license"/>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>