<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/face"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/dialog_edit_item_toolbar"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon"
            android:background="@drawable/ic_data_protection_invert"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_width="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_edit_item_toolbar" />

        <TextView
            android:id="@+id/title"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:paddingBottom="8dp"
            android:paddingTop="@dimen/guideline_dialog_content_padding"
            android:text="@string/dialog_privacy_update_sub_title"
            android:textColor="@color/head"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <TextView
            android:id="@+id/privacyPolicyMessage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:text="@string/dialog_privacy_update_message"
            android:textColor="@color/eye"
            android:textSize="@dimen/text_size_middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/title_analytics"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:paddingBottom="8dp"
            android:paddingTop="@dimen/guideline_dialog_content_padding"
            android:text="@string/dialog_analytics_sub_title"
            android:textColor="@color/head"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/privacyPolicyMessage" />

        <TextView
            android:id="@+id/analyticsMessage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:text="@string/dialog_analytics_message"
            android:textColor="@color/eye"
            android:textSize="@dimen/text_size_middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_analytics" />

        <CheckBox
            android:id="@+id/privacyPolicyCheckBox"
            android:buttonTint="@color/eye"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:text="@string/dialog_privacy_update_checkbox"
            android:textColor="@color/eye"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/analyticsMessage" />

        <CheckBox
            android:id="@+id/analyticsCheckBox"
            android:buttonTint="@color/eye"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:text="@string/dialog_analytics_checkbox"
            android:textColor="@color/eye"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/privacyPolicyCheckBox" />

        <Button
            android:id="@+id/ctaSave"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:text="@string/action_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/analyticsCheckBox"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/discard"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:text="@string/button_action_decline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ctaSave"
            app:layout_constraintTop_toBottomOf="@+id/analyticsCheckBox"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>